--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"types": ["jest", "@testing-library/jest-dom"]
+		"types": ["jest", "@testing-library/jest-dom", "node"]
 	},
 	"include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.test.ts", "src/**/*.test.tsx", "jest.setup.ts"],
 	"exclude": ["node_modules", "**/*.spec.ts"]
